fix for java 8