@@ -16,6 +16,7 @@ import static org.mockito.BDDMockito.then;
 import static org.mockito.BDDMockito.when;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
+import java.util.Arrays;
 import java.util.Date;
 import java.util.GregorianCalendar;
 import java.util.List;
@@ -34,7 +35,7 @@ public class GetAllEventControllerTest {
     @Test
     void getAllEvent_withUserCaseReturnData_thenReturnData() throws Exception {
         Date eventTime = new GregorianCalendar(2020, 9, 18, 16, 0, 0).getTime();
-        List<Event> eventList = List.of(Event.withId(new Event.EventId(1L), "Event name", eventTime));
+        List<Event> eventList = Arrays.asList(Event.withId(new Event.EventId(1L), "Event name", eventTime));
         when(getAllEventUseCase.getAllEvent()).thenReturn(eventList);
 
         mockMvc.perform(MockMvcRequestBuilders.get("/event"))
